correcting the link

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-  <script src="js/app.js"></script>
+  <script src="assets/js/app.js"></script>
 
   <header>
     <h1>Calculator</h1>
@@ -22,26 +22,26 @@
         <div class="calculator-result">
         </div>
         <div class="buttons-calculator">
-          <input class="b ce" type="button" value="CE">
-          <input class="b reset" type="button" value="C">
-          <input class="b delete" type="button" value="<-">
-          <input class="b divided" type="button" value="/">
-          <input class="n seven" type="button" value="7">
-          <input class="n eight" type="button" value="8">
-          <input class="n nine" type="button" value="9">
-          <input class="b multipli" type="button" value="x">
-          <input class="n four" type="button" value="4">
-          <input class="n five" type="button" value="5">
-          <input class="n six" type="button" value="6">
-          <input class="b less" type="button" value="-">
-          <input class="n one" type="button" value="1">
-          <input class="n two" type="button" value="2">
-          <input class="n three" type="button" value="3">
-          <input class="b plus" type="button" value="+">
-          <input class="b lessplus" type="button" value="+/-">
-          <input class="n cero" type="button" value="0">
-          <input class="b point" type="button" value=".">
-          <input class="b equal" type="button" value="=">
+          <input class="buttom b ce" type="button" value="CE">
+          <input class="buttom b reset" type="button" value="C">
+          <input class="buttom b delete" type="button" value="<-">
+          <input class="buttom b divided" type="button" value="/">
+          <input class="buttom n seven" type="button" value="7">
+          <input class="buttom n eight" type="button" value="8">
+          <input class="buttom n nine" type="button" value="9">
+          <input class="buttom b multipli" type="button" value="x">
+          <input class="buttom n four" type="button" value="4">
+          <input class="buttom n five" type="button" value="5">
+          <input class="buttom n six" type="button" value="6">
+          <input class="buttom b less" type="button" value="-">
+          <input class="buttom n one" type="button" value="1">
+          <input class="buttom n two" type="button" value="2">
+          <input class="buttom n three" type="button" value="3">
+          <input class="buttom b plus" type="button" value="+">
+          <input class="buttom b lessplus" type="button" value="+/-">
+          <input class="buttom n cero" type="button" value="0">
+          <input class="buttom b point" type="button" value=".">
+          <input class="buttom b equal" type="button" value="=">
         </div>
       </div>
     </section>
