ending styles layout

--- a/index.html
+++ b/index.html
@@ -20,28 +20,29 @@
     <section class="main-calculator">
       <div class="main__container">
         <div class="calculator-result">
+          <p id="resultOperation">4565466</p>
         </div>
         <div class="buttons-calculator">
           <input class="buttom b ce" type="button" value="CE">
           <input class="buttom b reset" type="button" value="C">
-          <input class="buttom b delete" type="button" value="<-">
-          <input class="buttom b divided" type="button" value="/">
+          <input class="buttom b delete" type="button" value="%">
+          <input class="buttom f divided" type="button" value="/">
           <input class="buttom n seven" type="button" value="7">
           <input class="buttom n eight" type="button" value="8">
           <input class="buttom n nine" type="button" value="9">
-          <input class="buttom b multipli" type="button" value="x">
+          <input class="buttom f multipli" type="button" value="x">
           <input class="buttom n four" type="button" value="4">
           <input class="buttom n five" type="button" value="5">
           <input class="buttom n six" type="button" value="6">
-          <input class="buttom b less" type="button" value="-">
+          <input class="buttom f less" type="button" value="-">
           <input class="buttom n one" type="button" value="1">
           <input class="buttom n two" type="button" value="2">
           <input class="buttom n three" type="button" value="3">
-          <input class="buttom b plus" type="button" value="+">
+          <input class="buttom f plus" type="button" value="+">
           <input class="buttom b lessplus" type="button" value="+/-">
           <input class="buttom n cero" type="button" value="0">
           <input class="buttom b point" type="button" value=".">
-          <input class="buttom b equal" type="button" value="=">
+          <input class="buttom f equal" type="button" value="=">
         </div>
       </div>
     </section>
@@ -60,16 +61,16 @@
     </div>
     <div class="linkSocial">
       <a class="Social Facebook" href="https://www.facebook.com/profile.php?id=100004147456798">
-        <img src="image/icons8-facebook.svg" alt="logo facebook" height="60px" />
+        <img src="assets/image/icons8-facebook.svg" alt="logo facebook" height="60px" />
       </a>
       <a class="Social Github" href="https://github.com/DianaCarolina3">
-        <img src="image/icons8-github.svg" alt="logo github" height="60px">
+        <img src="assets/image/icons8-github.svg" alt="logo github" height="60px">
       </a>
       <a class="Social Instagram" href="https://www.instagram.com/diana_carolinacm/">
-        <img src="image/icons8-instagram.svg" alt="logo instagram" height="45px">
+        <img src="assets/image/icons8-instagram.svg" alt="logo instagram" height="45px">
       </a>
       <a class="Social Twitter" href="https://twitter.com/DianaCa80600701">
-        <img src="image/icons8-twitter.svg" alt="logo twitter" height="50px">
+        <img src="assets/image/icons8-twitter.svg" alt="logo twitter" height="50px">
       </a>
     </div>
   </footer>
