--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
+  <link rel="icon" href="assets/image/icons8-calculator-64.png">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
