adding styles to html

--- a/index.html
+++ b/index.html
@@ -21,29 +21,30 @@
     <section class="main-calculator">
       <div class="main__container">
         <div class="calculator-result">
-          <p id="resultOperation">4565466</p>
+          <div class="previous-operation">5163564</div>
+          <div class="operation">145bdhb</div>
         </div>
         <div class="buttons-calculator">
-          <input class="buttom b ce" type="button" value="CE">
-          <input class="buttom b reset" type="button" value="C">
-          <input class="buttom b delete" type="button" value="%">
-          <input class="buttom f divided" type="button" value="/">
-          <input class="buttom n seven" type="button" value="7">
-          <input class="buttom n eight" type="button" value="8">
-          <input class="buttom n nine" type="button" value="9">
-          <input class="buttom f multipli" type="button" value="x">
-          <input class="buttom n four" type="button" value="4">
-          <input class="buttom n five" type="button" value="5">
-          <input class="buttom n six" type="button" value="6">
-          <input class="buttom f less" type="button" value="-">
-          <input class="buttom n one" type="button" value="1">
-          <input class="buttom n two" type="button" value="2">
-          <input class="buttom n three" type="button" value="3">
-          <input class="buttom f plus" type="button" value="+">
-          <input class="buttom b lessplus" type="button" value="+/-">
-          <input class="buttom n cero" type="button" value="0">
-          <input class="buttom b point" type="button" value=".">
-          <input class="buttom f equal" type="button" value="=">
+          <button class="b">CE</button>
+          <button class="b">C</button>
+          <button class="b">%</button>
+          <button class="f">/</button>
+          <button class="n">7</button>
+          <button class="n">8</button>
+          <button class="n">9</button>
+          <button class="f">x</button>
+          <button class="n">4</button>
+          <button class="n">5</button>
+          <button class="n">6</button>
+          <button class="f">-</button>
+          <button class="n">1</button>
+          <button class="n">2</button>
+          <button class="n">3</button>
+          <button class="f">+</button>
+          <button class="f">+/-</button>
+          <button class="n">0</button>
+          <button class="f point">.</button>
+          <button class="b">=</button>
         </div>
       </div>
     </section>
@@ -53,27 +54,24 @@
     <div class="finalFooter">
       <div class="designe-rights">
         <p>All rights reserved. Calculator</p>
-      </div>
-      <div class="designe">
         <p>
           Designed with 🧡<\3 <a href="https://twitter.com/DianaCa80600701" target="_blank">@DianaCa80600701</a>
         </p>
       </div>
-    </div>
-    <div class="linkSocial">
-      <a class="Social Facebook" href="https://www.facebook.com/profile.php?id=100004147456798">
-        <img src="assets/image/icons8-facebook.svg" alt="logo facebook" height="60px" />
-      </a>
-      <a class="Social Github" href="https://github.com/DianaCarolina3">
-        <img src="assets/image/icons8-github.svg" alt="logo github" height="60px">
-      </a>
-      <a class="Social Instagram" href="https://www.instagram.com/diana_carolinacm/">
-        <img src="assets/image/icons8-instagram.svg" alt="logo instagram" height="45px">
-      </a>
-      <a class="Social Twitter" href="https://twitter.com/DianaCa80600701">
-        <img src="assets/image/icons8-twitter.svg" alt="logo twitter" height="50px">
-      </a>
-    </div>
+      <div class="linkSocial">
+        <a class="Social Facebook" href="https://www.facebook.com/profile.php?id=100004147456798">
+          <img src="assets/image/icons8-facebook.svg" alt="logo facebook" height="60px" />
+        </a>
+        <a class="Social Github" href="https://github.com/DianaCarolina3">
+          <img src="assets/image/icons8-github.svg" alt="logo github" height="60px">
+        </a>
+        <a class="Social Instagram" href="https://www.instagram.com/diana_carolinacm/">
+          <img src="assets/image/icons8-instagram.svg" alt="logo instagram" height="45px">
+        </a>
+        <a class="Social Twitter" href="https://twitter.com/DianaCa80600701">
+          <img src="assets/image/icons8-twitter.svg" alt="logo twitter" height="50px">
+        </a>
+      </div>
   </footer>
 </body>
 
