--- a/index.html
+++ b/index.html
@@ -17,38 +17,36 @@
     <h1>Calculator</h1>
   </header>
 
-  <main>
-    <section class="main-calculator">
-      <div class="main__container">
-        <div class="calculator-result">
-          <div class="previous-operation">5163564</div>
-          <div class="operation">145bdhb</div>
-        </div>
-        <div class="buttons-calculator">
-          <button class="b">CE</button>
-          <button class="b">C</button>
-          <button class="b">%</button>
-          <button class="f">/</button>
-          <button class="n">7</button>
-          <button class="n">8</button>
-          <button class="n">9</button>
-          <button class="f">x</button>
-          <button class="n">4</button>
-          <button class="n">5</button>
-          <button class="n">6</button>
-          <button class="f">-</button>
-          <button class="n">1</button>
-          <button class="n">2</button>
-          <button class="n">3</button>
-          <button class="f">+</button>
-          <button class="f">+/-</button>
-          <button class="n">0</button>
-          <button class="f point">.</button>
-          <button class="b">=</button>
-        </div>
+  <section class="main-calculator">
+    <div class="main__container">
+      <div class="calculator-result">
+        <div class="previous-operation">5163564</div>
+        <div class="operation">145bdhb11615151213121213213</div>
       </div>
-    </section>
-  </main>
+      <div class="buttons-calculator">
+        <button data-delete-all="" class="b">CE</button>
+        <button data-delete="" class="b">C</button>
+        <button class="b">%</button>
+        <button data-operation="" class="f">÷</button>
+        <button data-number="" class="n">7</button>
+        <button data-number="" class="n">8</button>
+        <button data-number="" class="n">9</button>
+        <button data-operation="" class="f">x</button>
+        <button data-number="" class="n">4</button>
+        <button data-number="" class="n">5</button>
+        <button data-number="" class="n">6</button>
+        <button data-operation="" class="f">-</button>
+        <button data-number="" class="n">1</button>
+        <button data-number="" class="n">2</button>
+        <button data-number="" class="n">3</button>
+        <button data-operation="" class="f">+</button>
+        <button class="f">+/-</button>
+        <button data-number="" class="n">0</button>
+        <button data-number="" class="f point">.</button>
+        <button data-equal="" class="b">=</button>
+      </div>
+    </div>
+  </section>
 
   <footer>
     <div class="finalFooter">
