adding event button delete and clear

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button name="data-number" onclick="getElementById('result').innerHTML = clikNumbers()" class="n">0</button>
         <button name="data-number" onclick="getElementById('result').innerHTML = clikNumbers()"
           class="f point">.</button>
-        <button nama="data-equals" onclick="getElementById('result').innerHTML = clikEquals()" class="b">=</button>
+        <button name="data-equals" onclick="getElementById('result').innerHTML = clikEquals()" class="b">=</button>
       </div>
     </div>
   </section>
